# tauri-cpp-demo

./: LICENSE  README.md  external_copy.bat
cppdemolib/: .gitignore  CMakeLists.txt  README.md
cppdemolib/include/: CoreExport.h  cppdemolib_api.h
cppdemolib/src/: cppdemolib_api.cpp
cppdemolib/test/: test_hello.cpp
tauri-app/src/: App.tsx  styles.css
tauri-app/src-tauri/: build.rs  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
